--- a/main/res/values/attr.xml
+++ b/main/res/values/attr.xml
@@ -15,6 +15,10 @@
     <declare-styleable name="CircularImageView">
         <attr name="borderWidth" format="dimension" />
         <attr name="borderColor" format="color" />
+        <attr name="borderType">
+            <enum name="inside" value="0" />
+            <enum name="outside" value="1" />
+        </attr>
     </declare-styleable>
 
 </resources>
