--- a/main/res/values/attr.xml
+++ b/main/res/values/attr.xml
@@ -20,5 +20,20 @@
             <enum name="outside" value="1" />
         </attr>
     </declare-styleable>
+    <!-- pull to refresh -->
+    <declare-styleable name="SectionHeader">
+        <attr name="header_layout" format="reference" />
+        <attr name="is_collapsable" format="boolean" />
+    </declare-styleable>
+    <declare-styleable name="PullToRefresh">
+        <attr name="adapterViewBackground" format="reference|color" />
+        <attr name="ptrHeaderBackground" format="reference|color" />
+        <attr name="ptrHeaderTextColor" format="color" />
+        <attr name="ptrMode">
+            <flag name="pullDownFromTop" value="0x1" />
+            <flag name="pullUpFromBottom" value="0x2" />
+            <flag name="both" value="0x3" />
+        </attr>
+    </declare-styleable>
 
 </resources>
