--- a/main/res/layout/pull_to_refresh_section_list.xml
+++ b/main/res/layout/pull_to_refresh_section_list.xml
@@ -11,7 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="@android:color/transparent"
-        android:fastScrollEnabled="true"
+        android:fastScrollEnabled="false"
         android:divider="@null"
         ptr:is_collapsable="false"
         ptr:ptrMode="both" />
